<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root_layout"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:paddingLeft="16dp"
        android:paddingTop="64dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/hg_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:src="@drawable/logo"
                android:contentDescription="@null"/>
            <TextView
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/text"
                android:gravity="center"
                android:id="@+id/consent_title"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/consentTitle"
                android:fontFamily="@font/lato_semi_bold"
                android:paddingHorizontal="12dp"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/text"
                android:gravity="center"
                android:id="@+id/consent_keep_running"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/consentKeepRunning"
                android:fontFamily="@font/lato_semi_bold"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/text"
                android:gravity="center"
                android:id="@+id/consent_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/consentDisableMessage"
                android:fontFamily="@font/lato_bold"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/text"
                android:gravity="center"
                android:id="@+id/consent_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/consentDescription"
                android:fontFamily="@font/lato_regular"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/buttons_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">
            <Button
                android:textSize="16sp"
                android:textColor="@color/button_secondary_text_color"
                android:id="@+id/decline_button"
                android:background="@drawable/button_secondary_background"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:text="@string/consentDisagree"
                android:textAllCaps="false"
                android:fontFamily="@font/lato_regular"
                android:elevation="0dp"
                android:stateListAnimator="@null"/>
            <View
                android:layout_width="16dp"
                android:layout_height="0dp"/>
            <Button
                android:textSize="16sp"
                android:textColor="@color/button_primary_text_color"
                android:id="@+id/consent_button"
                android:background="@drawable/button_primary_background"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:text="@string/consentAgree"
                android:textAllCaps="false"
                android:fontFamily="@font/lato_regular"
                android:elevation="0dp"
                android:stateListAnimator="@null"/>
        </LinearLayout>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/text"
            android:textColorLink="@color/hyperlink"
            android:gravity="center"
            android:linksClickable="true"
            android:id="@+id/privacy_policy_text"
            android:paddingTop="8dp"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/consentTos"
            android:fontFamily="@font/lato_semi_bold"/>
    </LinearLayout>
</LinearLayout>
